[package]
name = "termint"
version = "0.6.1"
authors = ["Martin Slezák (github.com/Martan03)"]
description = "Library for colored printing and Terminal User Interfaces"
keywords = ["tui", "terminal", "termint", "ansi-codes", "color-printing"]
repository = "https://github.com/Martan03/termint"
documentation = "https://docs.rs/termint/latest/termint/"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

exclude = ["src/main.rs", ".github"]

[dependencies]
bitflags = "2.9.1"
compact_str = "0.9.0"
serde = { version = "1.0.218", features = ["std", "derive"], optional = true }
termal = { version = "2.1.2", features = ["raw", "events"] }
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
serde = ["dep:serde"]
all = ["dep:serde"]

[package.metadata."docs.rs"]
all-features = true

[[bench]]
name = "main"
harness = false
