[package]
name = "termint"
version = "0.8.1"
authors = ["Martin Slezák (github.com/Martan03)"]
description = "Library for colored printing and Terminal User Interfaces"
keywords = ["tui", "terminal", "termint", "ansi-codes", "color-printing"]
repository = "https://github.com/Martan03/termint"
documentation = "https://docs.rs/termint/latest/termint/"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"

exclude = ["src/main.rs", ".github"]

[dependencies]
bitflags = "2.9.1"
compact_str = "0.9.0"
crossterm = { version = "0.29.0", optional = true }
paste = "1.0.15"
serde = { version = "1.0.218", features = ["std", "derive"], optional = true }
termal = { version = "4.2.1" }
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["backend-crossterm"]
serde = ["dep:serde"]

backend-termal = ["termal/raw", "termal/events"]
backend-crossterm = ["dep:crossterm"]

all = ["serde", "backend-termal", "backend-crossterm"]

[package.metadata."docs.rs"]
all-features = true

[[bench]]
name = "main"
harness = false
